2007-05-11  Alan Modra  <amodra@bigpond.net.au>

	* binutils-all/needed-by-reloc.s: Use .long rather than .4byte.

2007-05-08  Mark Shinwell  <shinwell@codesourcery.com>

	* binutils-all/strip-3.d: Strip .ARM.attributes and .reginfo
	sections.

2007-05-02  Alan Modra  <amodra@bigpond.net.au>

	* binutils-all/objcopy.exp (copy_setup): Don't perror, use send_log.
	(copy_executable): Return early if test2 is blank.
	Return unsupported rather than unresolved if we can't run
	executables.  Do test1 if we can compile.

2007-04-24  Nathan Froyd  <froydnj@codesourcery.com>
	    Phil Edwards  <phil@codesourcery.com>

	* binutils-all/objcopy.exp: Add test for stripping a symbol
	used in a relocation.
	* binutils-all/needed-by-reloc.s: New file.

2007-04-20  Nathan Froyd  <froydnj@codesourcery.com>
	    Phil Edwards  <phil@codesourcery.com>
	    Thomas de Lellis <tdel@windriver.com>

	* binutils-all/objcopy.exp: Add test for --reverse-bytes.

2007-04-21  Richard Earnshaw  <rearnsha@arm.com>

	* binutils-all/readelf.exp (regexp_diff): Delete.

2007-04-20  Richard Earnshaw  <rearnsha@arm.com>

	* binutils-all/arm/thumb2-cond.s: Allow for tab expansion by the pty.
	Rename the second test.

2007-04-12  H.J. Lu  <hongjiu.lu@intel.com>

	PR binutils/4348
	* binutils-all/empty.s: New file.
	* binutils-all/strip-3.d: Likewise.

	* binutils-all/objcopy.exp: Run strip-3 for ELF target.

2007-02-27  Nathan Sidwell  <nathan@codesourcery.com>

	* binutils-all/objcopy.exp: Skip for uclinux targets.

2007-02-14  Nick Clifton  <nickc@redhat.com>

	* binutils-all/readelf.exp (readelf_wi_test): Fix unexpected
	output failure message.

2007-01-08  Kai Tietz	<kai.tietz@onevision.com>

	* copy-3.d: Renamed target x86_64-*-mingw64 to x86_64-*-mingw*
	* dlltool.exp: Dito
	* lang.rc: Dito
	* strtab1.rc: Dito
	* windres.exp: Dito

2006-09-20  Kai Tietz  <Kai.Tietz@onevision.com>

	* binutils-all/copy-3.d: Add support for target x86_64-pc-mingw64.
	* binutils-all/dlltool.exp: Likewise.